# SMER-bot

./: .gitignore  config.py  database.py  handlers.py  main.py  pyproject.toml
src/: database.py  handlers.py  registration.py  registration_middleware.py  reminder.py
src/handlers/: analyze.py  export.py  handlers.py  registration.py
src/middleware/: gigachat.py  registration.py
src/utils/: export.py  reminder.py
